# QPiPC

./: .gitignore  CMakeLists.txt  PiPCControlPage.qml  QPiPC  QPiPC.cpp  QPiPC_en_US.ts  QPiPC_global.h  QPiPC_p.h  res.qrc
example/: main.cpp
